--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcc 'CT'
 - !lcsh 'Chemists -- United States -- Biography'
 - !lcsh 'Cutbush, James, 1788-1823'
+- GITenberg
 title: 'James Cutbush
 
   An American Chemist, 1788-1823'
